corrected spacing on BD

--- a/docs/BDay2025/style.css
+++ b/docs/BDay2025/style.css
@@ -135,7 +135,7 @@ a:visited, a:active{
 	font-size: 2.2vh;
 	font-weight: bold;
 	color: white;
-	margin-left: 20%;
+	margin-left: 3vh;
 	line-height: 170%;
 	display: none;
 }
